# DASH-streaming-simple

./: .gitmodules  README.md
asset/MPD/: kinetics2.mpd  kinetics2_0_1.webm  kinetics2_0_2.webm  kinetics2_0_3.webm  kinetics2_init_0.webm
asset/videos/: kinetics2.webm
src/: CMakeLists.txt  client.cpp  server.cpp
